comecei a escrever conteúdo

--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
 <body>
     <main>
         <header>
-            <h1>Título do site</h1>
+            <h1>Cursos Grátis</h1>
         </header>
         <article>
-            <h1>Atigo 001</h1>
-            <p>Testo Artigo 001</p>
+            <h1>Curso de HTML5 com CSS3</h1>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Molestiae officia consectetur repudiandae neque magni sequi eius animi quod, aliquid quaerat est suscipit beatae commodi corporis eos laudantium architecto ipsam fugiat!</p>
         </article>
         <article>
-            <h2>Artigo 002</h2>
-            <p>Texto Artigo 002</p>
+            <h2>Curso de JavaScript</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae, odit nihil esse inventore magni fuga perferendis autem saepe eos recusandae eum deleniti quisquam porro animi repudiandae officia placeat dolorum! Numquam.</p>
         </article>
     </main>
 </body>
